--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,8 @@
 quarkus.datasource.url=jdbc:h2:mem:default
 quarkus.datasource.driver=org.h2.Driver
 quarkus.datasource.username=admin
-%dev.quarkus.hibernate-orm.database.generation=drop-and-create
-%prod.quarkus.hibernate-orm.database.generation=drop-and-create
-%prod.quarkus.hibernate-orm.sql-load-script=import.sql
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=import.sql
 
 quarkus.swagger-ui.always-include=true
 
